# clauz3

./: .gitignore  AGENTS.md  Justfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  main.yaml  release.yaml
docs/: index.md  macros.py  quickstart.md  registry.md
docs/examples/: bank-all-cases.md  bank.md  email-all-cases.md  email-from-db-all-cases.md  email-from-db.md  email.md  home-automation-all-cases.md  home-automation.md  lims-all-cases.md  lims.md  text-all-cases.md  text.md
docs/explanation/: background.md  concepts.md  faq.md  symbolic-iteration.md
docs/how-to/: approval-service.md  install-layers.md  integration-testing.md  pi-harness.md
docs/reference/: cli.md  coverage-policies.md  effect-specs.md  fluents.md  python-subset.md  stdlib.md
docs/slides/: index.html
docs/stdlib/: editor-all-cases.md  editor.md  env-all-cases.md  env.md  filesystem-all-cases.md  filesystem.md  grep-all-cases.md  grep.md  web_fetch-all-cases.md  web_fetch.md  web_search-all-cases.md  web_search.md
docs/stylesheets/: extra.css
docs/todos/: approval-policies.md  clauz3-tools-assistant.md  effect-ir.md  fluents.md  (+6 more)
tests/: conftest.py  test_approval_policy.py  test_approval_service.py  test_bank_prover.py  test_chained_comparisons.py  test_cli.py  test_column_ref.py  test_config.py  test_coverage.py  test_dry_run_kwarg.py  test_email_prover.py  test_fluents.py  test_for_loop.py  test_import.py  test_install.py  test_libtest.py  test_model.py  test_quantified_facts.py  test_quantified_relations.py  test_relation_lambdas.py  test_required.py  test_row_proxy.py  test_run.py  test_source.py  test_stdlib.py
(+267 files in other folders)
